fix background image issue on safari

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,9 +39,9 @@
   --font-size-slide: 2.5rem;  
   --font-weigth-slide: 500;
 
-  --slide-img-1: url(../img/hero-bg-big-1.jpg);
-  --slide-img-2: url(../img/hero-bg-big-2.jpg);
-  --slide-img-3: url(../img/hero-bg-big-3.jpg);
+  --slide-img-1: url("../img/hero-bg-big-1.jpg");
+  --slide-img-2: url("../img/hero-bg-big-2.jpg");
+  --slide-img-3: url("../img/hero-bg-big-3.jpg");
 
   --color-bg-slideshow-btn: rgba(0,0,0,0.5);
 }
@@ -81,7 +81,9 @@ a:visited {
 }
 
 .slideshow {
-  width: 100%; height: 100vh;
+  width: 100%; 
+  height: 100vh;
+  
   position: relative; 
   //background-color: black; 
 
@@ -326,6 +328,7 @@ a:visited {
   top: 0; left: 0;
   width: 100vw;
   height: 100vh;
+  
   background-color: var(--color-nav-resp-bg);
   backdrop-filter: var(--backdrop-filter-nav-resp-bg);
 
